[package]
name = "wordler"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
itertools = "0.12.1"
regex = "1.10.3"
rustc-hash = "2.0.0"

[dev-dependencies]
rstest = "0.18.2"
