[package]
name = "wordler"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.14.0"
regex = { version = "1.11.1", default-features = false, features = [
  "std",
  "perf",
] }
rustc-hash = "2.1.1"

[dev-dependencies]
rstest = "0.25.0"

[profile.release]
strip = "symbols"
panic = "abort"
